rename project to biruni, and create release pipeline. add ds store to git ignore switch out new public media.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
-  private-notes:
-    build: .
+  biruni:
+    image: ghcr.io/wesamjabali/biruni:latest
+    container_name: biruni
     ports:
       - "3000:3000"
     environment:
