--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "GitNotes",
-    "short_name": "GitNotes",
+    "name": "Biruni",
+    "short_name": "Biruni",
     "display": "standalone",
     "background_color": "#1e1e1e",
     "theme_color": "#1e1e1e",
