--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,14 +6,9 @@
     "theme_color": "#1e1e1e",
     "icons": [
         {
-            "src": "/favicon.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/favicon.png",
-            "sizes": "512x512",
-            "type": "image/png"
+            "src": "/favicon.jpeg",
+            "sizes": "192x192 512x512",
+            "type": "image/jpeg"
         }
     ],
     "scope": "/"
